Centered icons and fixed cards on mobile.

--- a/webpage/styles/style.scss
+++ b/webpage/styles/style.scss
@@ -801,18 +801,6 @@ select.form-element-field {
   align-items: center;
 }
 
-.dashboard-card {
-  background-color: black;
-  height: 25%;
-  min-height: 100px;
-  width: 25%;
-  min-width: 200px;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  border-radius: 15px;
-  text-align: center;
-}
-
 .icon-services {
   background:url('../images/icon-chair.svg');
   background-size: 100%;
@@ -842,6 +830,43 @@ select.form-element-field {
   height:50px;
   display: block;
 }
+.icon {
+  margin: 0 auto;
+}
+
+.divider {
+  border-bottom: 1px solid $primary-color2;
+}
+// Cards
+.dashboard-card {
+  background: $primary-color5;
+  cursor: pointer;
+  height: 25%;
+  min-height: 100px;
+  width: 25%;
+  min-width: 200px;
+  padding: 1.5em;
+  position: relative;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  text-align: center;
+  
+  &:hover {
+    box-shadow: 0 0 2em #999;
+    
+    .divider {
+      opacity: 0.5;
+    }
+  }
+}
+
+.dashboard-main a {
+  color: $primary-color4;
+  text-decoration: none;
+  font-weight: bold;
+  text-transform: uppercase;
+}
 
 /*END OF DASHBOARD INDEX STYLING*/
 /*
@@ -870,6 +895,17 @@ select.form-element-field {
         grid-template-rows: 1fr 2fr;
     }
   }  
+  .dashboard-main {
+    background-color: $primary-color4;
+    display: grid;
+    grid-template-areas: "services"
+    "clients"
+    "staff"
+    "calendar";
+    grid-gap: 2em;
+    justify-items: center;
+    align-items: center;
+  }
  }
 
 // Medium devices (tablets, 768px and up)
